<resources>
    <string name="app_name">Estafeta</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="error_invalid_email_address">Verifica que el email este escrito correctamente</string>
    <string name="error_empty_field">Este campo no puede estar vacío</string>
    <string name="error_phone_field">El número debe de ser de 10 dígitos</string>
    <string name="done">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="req_man_confirm_exit">¿Desea salir de la aplicación?</string>
    <string-array name="drawer_items">
        <item>Rastreo</item>
        <item>Sucursales</item>
        <item>Prellenado de guías</item>
        <item>@string/quotation_title</item>
        <item>Historial de operaciones</item>
        <item>Código postal</item>
        <item>Aviso de privacidad</item>
        <item>Favoritos</item>
        <item>Historia</item>
        <item>Detalle</item>
        <item>Contactos frecuentes</item>
    </string-array>
    <string name="Search">Buscar</string>
    <string name="offices_search_by_address">Buscar por dirección</string>
    <string name="city_etc">Ciudad, municipio, delegación*</string>
    <string name="city">Ciudad, municipio, delegación</string>
    <string name="locality">Colonia</string>
    <string name="zip_code">C.P.</string>
    <string name="mandatory_fields">Campos obligatorios *</string>
    <string name="log_out">\n¿Desea salir de la aplicación?\n</string>
    <string name="rastreo">Rastreo</string>
    <string name="codigo_postal">Código postal</string>
    <string name="favoritos">Favoritos</string>
    <string name="history">Historia</string>
    <string name="footer">Estafeta Mexicana, S.A. de C.V.</string>
    <string name="aviso_rastreo"> El código de rastreo debe tener 10 dígitos. \nEl número de guía debe tener 22 dígitos.</string>
    <string name="code_invalid">Código invalido, favor de verificarlo.</string>
    <string name="codigo">Código</string>
    <string name="aviso_codigo">Has ingresado 0 de 10 guías para rastrear</string>
    <string name="boton_escanear">Escanear</string>
    <string name="boton_rastrear">Rastrear</string>
    <string name="no_guia">Número de guía:</string>
    <string name="cod_rastreo">Código de rastreo: \u0020</string>
    <string name="boton_codigo_guia">Guía</string>
    <string name="codigo_factura">Factura</string>
    <string name="codigo_ticket">Ticket</string>
    <string name="cerrar">Cerrar</string>
    <string name="no_guia2">No. Guía: \u0020</string>
    <string name="estatus_servicio">Estatus del servicio: \u0020</string>
    <string name="origen">Origen: \u0020</string>
    <string name="fecha_recoleccion">Fecha de recolección: \u0020</string>
    <string name="destino">Destino: \u0020</string>
    <string name="cp_destino">C.P. Destino: \u0020</string>
    <string name="fecha_hora">Fecha y hora de entrega: \u0020</string>
    <string name="recibio">Recibió: \u0020</string>
    <string name="ver_historia">Ver historia</string>
    <string name="llamar">Llamar</string>
    <string name="compartir">Compartir</string>
    <string name="delete">Eliminar</string>
    <string name="modify">Modificar</string>
    <string name="code_incorrect">El código leído es incorrecto</string>
    <string name="title_date_time">Fecha - Hora</string>
    <string name="title_place_event">Lugar - Movimiento</string>
    <string name="title_coments">Comentarios</string>
    <string name="notification_alarm">Alarma de notificación</string>
    <string name="delivery_confirmation">Confirmación de entrega.</string>
    <string name="maximo_favoritos">La información de favoritos se almacena durante un periodo máximo de 30 días.</string>
    <string name="view_ar">Ver a mi alrededor</string>
    <string name="loading_AR_elements">Loading components...</string>
    <string name="offices_near"> Cerca de mí</string>
    <string name="oficinas">Sucursales</string>
    <string name="ubicar_oficinas">Ubicar sucursales</string>
    <string name="quotation_title">Cotizar y comprar guías</string>
    <string name="quotation_shipping">Cotizar envío</string>
    <string name="quotation_national">Nacional</string>
    <string name="quotation_international">Internacional</string>
    <string name="quotation_packet">Sobre</string>
    <string name="quotation_package">Paquete</string>
    <string name="quotation_zip_origin">C.P. Origen</string>
    <string name="quotation_zip_destination">C.P. Destino</string>
    <string name="quotation_quote">Cotizar</string>
    <string name="quotation_weigth">Peso (kg)</string>
    <string name="quotation_high">Alto (cm)</string>
    <string name="quotation_long">Largo (cm)</string>
    <string name="quotation_width">Ancho (cm)</string>
    <string name="quotation_search_zc">Buscar código postal</string>
    <string name="quotation_search_zc_accept">Buscar</string>
    <string name="quotation_search_zc_cancel">Cancelar</string>
    <string name="sender_name">Nombre remitente</string>
    <string name="phone_number">Teléfono</string>
    <string name="email">Correo eléctronico</string>
    <string name="bussines_name">Razón social</string>
    <string name="cp_source">C.P. Origen</string>
    <string name="state">Estado</string>
    <string name="city_district">Ciudad, municipio, delegación</string>
    <string name="colony">Colonia</string>
    <string name="street">Calle</string>
    <string name="number">No.</string>
    <string name="next">Siguiente</string>
    <string name="receiver_name">Nombre destinatario</string>
    <string name="cp_receiver">C.P. Destino</string>
    <string name="continue_buy">Continuar compra</string>
    <string name="buy">Comprar</string>
    <string name="comprobante_compra">Comprobante de compra</string>
    <string name="sender">Remitente: </string>
    <string name="origin">Origen: </string>
    <string name="cp_origin">C.P. Origen: </string>
    <string name="receiver">Destinatario: </string>
    <string name="destiny">Destino: </string>
    <string name="cp_destiny">C.P. Destino: </string>
    <string name="type_of_service">Tipo de servicio: </string>
    <string name="quarantee">Garantía de entrega: </string>
    <string name="total_cost">Costo total: </string>
    <string name="payment_reference">Referencia de pago: </string>
    <string name="verificar_codigo">Validar un código postal</string>
    <string name="abr_codigo">C.P.</string>
    <string name="validar_codigo">Validar</string>
    <string name="buscar_codigo">Buscar un código postal</string>
    <string name="search_by_zip_code">Código postal</string>
    <string name="estado">Estado</string>
     <string name="aviso_privacidad">
        <![CDATA[
        <html>
         <head></head>
         <body style="text-align:justify;color:#838383;background:#ffffff">
            ESTAFETA MEXICANA, S.A. DE C.V. (en lo sucesivo ESTAFETA) le comunica al CLIENTE que la información que este último le proporcione para la prestación de los servicios que se contraten con ESTAFETA,
            puede contener Datos Personales y/o Datos Personales Sensibles o financieros, mismos que podrán ser tratados y/o almacenados por ESTAFETA conforme sea necesario para poder prestar sus servicios. Asimismo,
            ESTAFETA podrá transferir dichos datos a aquellas entidades relacionadas con ESTAFETA, siempre que sea necesario para poder prestar los servicios acordados entre las partes.
            </br></br>
            ESTAFETA cuenta con domicilio en Av. José Vasconcelos No.105 Piso 4, Col. Hipódromo Condesa, Del. Cuauhtémoc, México, D.F., C.P. 06170.
            En caso de que EL CLIENTE desee limitar el uso o divulgación de los datos proporcionados a ESTAFETA, así como ejercer sus derechos de acceso, rectificación,
            cancelación u oposición a que se hace referencia en la legislación aplicable, deberá dirigir su solicitud por escrito al área de Atención a Clientes de ESTAFETA con domicilio en Cerrada de Ceylán 539,
             Col. Industrial Vallejo, México, D.F., C.P. 02300, a partir del 6 de enero de 2012.
             </br></br>
            Cualquier cambio a los términos del presente aviso de privacidad será publicado a través de la página de internet de ESTAFETA, http://www.estafeta.com
            </br></br>
        </body>
        </html>
        ]]>
    </string>
    <string name="error_codigo">Código postal no válido.</string>
    <string name="error_ciudad">La ciudad es obligatoria.</string>
    <string name="error_estado">Debes seleccionar un estado.</string>
    <string name="cargando_oficinas">Cargando sucursales...</string>
    <string name="error_servicio">No se encontraron resultados para su búsqueda, intente nuevamente.</string>
    <string name="error_servicio1">Revisa tu conexión a Internet.</string>
    <string name="cargando">Cargando...</string>
    <string name="actualizando">Actualizando...</string>
    <string name="error_tamaño_codigo">Un código de rastreo debe ser de 10 dígitos, y un número de guía debe ser de 22 dígitos.</string>
    <string name="error_cod_repetido">El número ya existe en la lista de rastreo.</string>
    <string name="error_lista_vacia">La lista de rastreo se encuentra vacía.</string>
    <string name="error_agregar_fav">No existe información acerca de este registro, no puede agregarse a favoritos.</string>
    <string name="exito_agregar_fav">Operación exitosa.</string>
    <string name="no_sensor">No es posible llevar a cabo la función de realidad aumentada debido a que tu dispositivo no cuenta con sensor de campo magnético. </string>
    <string name="error_service">Error contactando al servidor, intente de nuevo mas tarde.</string>
    <string name="db_trackdata">CREATE TABLE "trackdata" ("id_trackdata"  INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, "waybill"  TEXT(24),
        "shortwaybill" TEXT(24), "srvcid"  TEXT(24), "srvcdescspa" TEXT(24), "srvcdesceng" TEXT(24), "custnumber" TEXT(24), "packagetype" TEXT(24),
        "adtnlinfo" TEXT(24), "statusspa" TEXT(24), "statuseng"  TEXT(24), "pd_org_acronym" TEXT(24), "pd_org_name"  TEXT(24), "pd_pkup_date" TEXT(24),
        "dd_dst_acronym" TEXT(24), "dd_dst_name" TEXT(24), "dd_dlvry_date" TEXT(24), "dd_zip"  TEXT(24), "dd_rcvr" TEXT(24), "dm_weight" TEXT(24),
        "dm_volweight"  TEXT(24), "dm_width"  TEXT(24), "dm_length"  TEXT(24), "dm_height" TEXT(24), "wbrd_org_waybill"  TEXT(24), "wbrd_rplc_waybill"
        TEXT(24), "rtrndd_initl_waybill"  TEXT(24), "rtrndd_final_waybill" TEXT(24), "msd_prec_waybills" TEXT(24), "msd_foll_waybills" TEXT(24),
        "msd_wb_list"  TEXT(24), "intld_intl_waybill"  TEXT(24), "intld_org_countrycode" TEXT(24), "intld_org_countryspa"  TEXT(24), "intld_org_countryeng"
        TEXT(24), "cstminfo_reference" TEXT(24), "cstminfo_costsCentre" TEXT(24), "id_ctl_favoritos" INTEGER NOT NULL)</string>
    <string name="db_history">CREATE TABLE "history" ( "id_history"  INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, "add_date"  TEXT(30),
                              "code_number" TEXT(50), "favorite"  TEXT(24), "H_eventDescriptionSPA" TEXT(200), "H_eventDateTime" TEXT(200), "H_eventPlaceName" TEXT(200), "H_exceptionCodeDescriptionSPA" TEXT(200))</string>
    <string name="instruction_prefilled">Introduzca el código alfanumérico de \"X\" dígitos generado para continuar con el prellenado iniciado previamente.</string>
    <string name="continue_btn">Continuar</string>
    <string name="code">Código</string>
    <string name="prefilled_code">Código de prellenado</string>
    <string name="get_data_contacts">Extraer datos</string>
    <string name="contacts">Contactos</string>
    <string name="frequently">Frecuentes</string>
</resources>