<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width    ="match_parent"
        android:layout_height   ="wrap_content"
        android:background      ="@drawable/head_cpostal"
        android:orientation     ="vertical"
        >

        <TextView
            android:layout_width        ="wrap_content"
            android:layout_height       ="wrap_content"
            android:text                ="@string/codigo_postal"
            android:textSize            ="@dimen/sizeLargeText"
            android:paddingLeft         ="30dp"
            android:textColor           ="@color/estafeta_text"
            android:layout_gravity      ="center_horizontal|bottom"
            android:paddingRight        ="5dp"
            android:layout_marginTop    ="70dp" />

    </LinearLayout>

    <TextView
        android:layout_width        ="match_parent"
        android:layout_height       ="wrap_content"
        android:textSize            ="@dimen/sizeMediumText"
        android:textColor           ="@android:color/black"
        android:text                ="@string/verificar_codigo"
        android:layout_marginLeft   ="20dp"
        android:layout_marginRight  ="20dp"
        android:layout_marginTop    ="10dp"/>

    <LinearLayout
        android:layout_width        ="match_parent"
        android:layout_height       ="wrap_content"
        android:orientation         ="horizontal"
        android:layout_gravity      ="left"
        android:layout_marginBottom ="10dp"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="horizontal">

            <EditText
                android:id                  ="@+id/verify_zip_code"
                android:layout_width        ="wrap_content"
                android:layout_height       ="match_parent"
                android:textColor           ="@color/estafeta_text"
                android:textSize            ="@dimen/sizeMediumText"
                android:hint                ="@string/search_by_zip_code"
                android:textColorHint       ="@color/estafeta_soft_gray"
                android:maxLength           ="5"
                android:layout_marginLeft   ="20dp"
                android:inputType           ="numberSigned"
                android:layout_marginRight  ="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/estafeta_red"
                android:layout_marginRight  ="10dp"
                android:text="*"
                android:gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>


        <Button
            android:id              ="@+id/btn_validar_zipcode"
            android:layout_width    ="0dp"
            android:layout_height   ="wrap_content"
            android:layout_weight   ="4"
            android:text            ="@string/validar_codigo"
            android:textSize        ="@dimen/sizeNormalText"
            android:textColor       ="@color/estafeta_red"
            android:layout_gravity  ="center_horizontal"
            android:background      ="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/estafeta_soft_gray">

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:textSize            ="@dimen/sizeMediumText"
            android:textColor           ="@android:color/black"
            android:text                ="@string/buscar_codigo"
            android:layout_marginLeft   ="20dp"
            android:layout_marginRight  ="20dp"
            android:layout_marginTop    ="10dp"/>

        <Spinner
            android:id                  ="@+id/spinner_state"
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:layout_gravity      ="left"
            android:layout_marginTop    ="10dp"
            android:layout_marginRight  ="20dp"
            android:layout_marginLeft   ="20dp"
            android:spinnerMode         ="dialog"
            android:dividerHeight       ="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <EditText
                android:id                  ="@+id/ciudad"
                android:layout_width        ="0dp"
                android:layout_height       ="wrap_content"
                android:layout_weight="95"
                android:textColor           ="@color/estafeta_text"
                android:textSize            ="@dimen/sizeMediumText"
                android:hint                ="@string/city_etc"
                android:textColorHint       ="@color/estafeta_soft_gray"
                android:layout_marginTop    ="10dp"
                android:layout_marginLeft   ="20dp"
                android:layout_marginRight  ="20dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/estafeta_red"
                android:layout_marginRight  ="10dp"
                android:text="*"
                android:textStyle="bold"/>

        </LinearLayout>
        <EditText
            android:id                  ="@+id/colonia"
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:textColor           ="@color/estafeta_text"
            android:textSize            ="@dimen/sizeMediumText"
            android:hint                ="@string/locality"
            android:textColorHint       ="@color/estafeta_soft_gray"
            android:layout_marginLeft   ="20dp"
            android:layout_marginRight  ="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mandatory_fields"
            android:textSize="@dimen/sizeSmallText"
            android:textColor="@color/estafeta_red"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/btn_buscar_zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Search"
            android:textSize="@dimen/sizeNormalText"
            android:textColor="@color/estafeta_red"
            android:background="@android:color/transparent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"/>

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/footerSize"
            android:layout_marginLeft="10dp"
            android:text="@string/footer"
            android:textColor="@color/estafeta_soft_gray"
            android:layout_marginTop="10dp"
            android:layout_gravity="bottom|center_horizontal"/>

        </LinearLayout>


</LinearLayout>
